crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, b, d)\n   VALUES ('d', 'humble'::text, '10000.00001'::float8);"
---
InsertStmt@0..88
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "b"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "d"
  Ascii41@31..32 ")"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  SelectStmt@36..86
    Values@36..42 "VALUES"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..86
      AConst@44..47
        Sconst@44..47 "'d'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      TypeCast@49..63
        AConst@49..57
          Sconst@49..57 "'humble'"
        Typecast@57..59 "::"
        TypeName@59..63
          TextP@59..63 "text"
      Ascii44@63..64 ","
      Whitespace@64..65 " "
      TypeCast@65..86
        AConst@65..78
          Sconst@65..78 "'10000.00001'"
        Typecast@78..80 "::"
        TypeName@80..86
          Ident@80..86 "float8"
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

