crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, c, d)\n   VALUES ('d', 'hi ginger'::name, '100000.000001'::float8);"
---
InsertStmt@0..93
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "c"
  Ascii44@28..29 ","
  Whitespace@29..30 " "
  ResTarget@30..31
    Ident@30..31 "d"
  Ascii41@31..32 ")"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  SelectStmt@36..91
    Values@36..42 "VALUES"
    Whitespace@42..43 " "
    Ascii40@43..44 "("
    List@44..91
      AConst@44..47
        Sconst@44..47 "'d'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      TypeCast@49..66
        AConst@49..60
          Sconst@49..60 "'hi ginger'"
        Typecast@60..62 "::"
        TypeName@62..66
          NameP@62..66 "name"
      Ascii44@66..67 ","
      Whitespace@67..68 " "
      TypeCast@68..91
        AConst@68..83
          Sconst@68..83 "'100000.000001'"
        Typecast@83..85 "::"
        TypeName@85..91
          Ident@85..91 "float8"
  Ascii41@91..92 ")"
  Ascii59@92..93 ";"

