crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, a) VALUES ('d', 14);"
---
InsertStmt@0..47
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "a"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..45
    Values@30..36 "VALUES"
    Whitespace@36..37 " "
    Ascii40@37..38 "("
    List@38..45
      AConst@38..41
        Sconst@38..41 "'d'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..45
        Iconst@43..45 "14"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

