crates/pg_syntax/tests/snapshots/postgres_regress/create_misc@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO d_star (class, c) VALUES ('d', 'hi jolly'::name);"
---
InsertStmt@0..61
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "d_star"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ResTarget@20..25
    Class@20..25 "class"
  Ascii44@25..26 ","
  Whitespace@26..27 " "
  ResTarget@27..28
    Ident@27..28 "c"
  Ascii41@28..29 ")"
  Whitespace@29..30 " "
  SelectStmt@30..59
    Values@30..36 "VALUES"
    Whitespace@36..37 " "
    Ascii40@37..38 "("
    List@38..59
      AConst@38..41
        Sconst@38..41 "'d'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      TypeCast@43..59
        AConst@43..53
          Sconst@43..53 "'hi jolly'"
        Typecast@53..55 "::"
        TypeName@55..59
          NameP@55..59 "name"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

